test/syc/good/forloop.c
/*
 * For loop
 */

int i;
int s;
int a;

void for_loop(void)
{
	for (i = s; i != 0; i = i - 1)
		++a;
}

void for_ever_loop(void)
{
	for (;;) {
	}
}
