test/syc/bad/initmbrnonrec.c
/*
 * Member access in non-record initializer.
 */

int a[1] = {
	.x = 0
};
